the configuration file now stores the information about how the event structure is.
to use this one has to setup a new supsection in the config file like this:

[EventStruct]
NumberOfEvents = 1000
LongBusyTime = 20

where "NumberOfEvents" says how many events are in one bunch. between two long busy signals

and  "LongBusyTime" gives the time in µs of the long busy signal.

--- a/conf/ni_autotrig.conf
+++ b/conf/ni_autotrig.conf
@@ -2,6 +2,11 @@
 RunSizeLimit = 100000000
 NoTrigWarnTime = 10
 
+[EventStruct]
+NumberOfEvents = 1000
+LongBusyTime = 20
+
+
 [DataCollector]
 
 [LogCollector]
