Async event sender:
working in compiled code but not int the interpreter therefore i will not continue this approach

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ extern/*
 data/*
 RootInterface/Release/*
 RootInterface/Debug/*
+rootInterfaceTest/*
+RootInterface/src/SCTDict.cxx
+RootInterface/src/SCTDict.h
