started offline monitor Project

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ RootInterface/Debug/*
 rootInterfaceTest/*
 RootInterface/src/SCTDict.cxx
 RootInterface/src/SCTDict.h
+OfflineMonitor/Debug/*
+OfflineMonitor/Release/*
