--- a/OfflineMonitor/OfflineMonitor.vcxproj.filters
+++ b/OfflineMonitor/OfflineMonitor.vcxproj.filters
@@ -15,22 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scr\OfflineMonitor.cxx">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="scr\Planes.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="scr\CorrelationPlots.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="scr\makeCorrelations.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="src\CorrelationVSTimePlots.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="src\CorrelationPlots_interface.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CorrelationPlots.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\makeCorrelations.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\OfflineMonitor.cxx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Planes.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
