--- a/OfflineMonitor/OfflineMonitor.vcxproj.filters
+++ b/OfflineMonitor/OfflineMonitor.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="inc\CorrelationVSTimePlots.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="inc\RootFactories.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
