--- a/producers/CMakeLists.txt
+++ b/producers/CMakeLists.txt
@@ -31,3 +31,4 @@ optional_add_subdirectory(miniTLU)
 optional_add_subdirectory(cmspixel)
 optional_add_subdirectory(timepix3)
 optional_add_subdirectory(root)
+optional_add_subdirectory(exampleSCTProducer)
