--- a/monitors/metamon/CMakeLists.txt
+++ b/monitors/metamon/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_executable(MetaMon.exe   src/MetaMon.cxx  )
+add_executable(MetaMon   src/MetaMon.cxx  )
+set_property(TARGET MetaMon     PROPERTY PROJECT_LABEL "BinMetaMon") 
+target_link_libraries(MetaMon   EUDAQ ${EUDAQ_THREADS_LIB} ${ADDITIONAL_LIBRARIES})
 
-target_link_libraries(MetaMon.exe   EUDAQ ${EUDAQ_THREADS_LIB} ${ADDITIONAL_LIBRARIES})
-
-INSTALL(TARGETS MetaMon.exe
+INSTALL(TARGETS MetaMon
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
