--- a/producers/ni/CMakeLists.txt
+++ b/producers/ni/CMakeLists.txt
@@ -1,8 +1,9 @@
-set(name "NiProducer.exe")
+set(name "NiProducer")
 set(sourcefiles src/NiProducer.cxx src/NiController.cc)
 
 INCLUDE_DIRECTORIES( include )
 add_executable(${name} ${sourcefiles})
+set_property(TARGET ${name}     PROPERTY PROJECT_LABEL "BinNiProducer") 
 
 target_link_libraries(${name}   EUDAQ ${EUDAQ_THREADS_LIB})
 
