new file reader which concats runs
 new file writer which produces hitmaps

--- a/monitors/offlinemon/CMakeLists.txt
+++ b/monitors/offlinemon/CMakeLists.txt
@@ -15,7 +15,7 @@ SET (OfflineMon_SOURCES
 
 add_executable(${OfflineMon_name} ${OfflineMon_SOURCES} )
 
-set_property(TARGET ${OfflineMon_name}     PROPERTY PROJECT_LABEL "BinOfflineMonitor") 
+set_property(TARGET ${OfflineMon_name}     PROPERTY PROJECT_LABEL "Bin_OfflineMonitor") 
 
 
 target_link_libraries(${OfflineMon_name} EUDAQ ${EUDAQ_THREADS_LIB} ${ROOT_LIBRARIES} ${ADDITIONAL_LIBRARIES})
